--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,8 @@ nav {
 
 .footerwrapper {
 	text-align: left;
-	padding-top: 1em;
+	/*padding-top: 1em;*/
+	padding-top: 1.3em;
 	/*margin-top: 3em;*/
 	margin-top: 2em;
 	border-top: 1px solid black;
@@ -268,7 +269,8 @@ nav {
 	.footerwrapper ul {
 		float: right;
 		overflow: hidden;
-		margin-top: -3em;
+		/*margin-top: -3em;*/
+		margin-top: -3.5em;
 	}
 
 		.footerwrapper ul li {
